Make an actual HTML page around the map embed

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<script src="https://embed.github.com/view/geojson/LincolnElementary/WalkToSchool/master/maps/wts.geojson"></script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Lincoln Elemetary Walk To School Program</title>
+  </head>
+  <body>
+    <script src="https://embed.github.com/view/geojson/LincolnElementary/WalkToSchool/master/maps/wts.geojson"></script>
+  </body>
+</html>
